--- a/app/src/main/res/layout/fragment_pharmacy.xml
+++ b/app/src/main/res/layout/fragment_pharmacy.xml
@@ -6,36 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".nav_ui.pharmacy.PharmacyFragment">
 
-    <Button
-        android:id="@+id/bt_see_maps"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        android:text="Lihat Peta"
-        android:onClick="seeMapsOnClick"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Tes nih ye kudunye lu bise"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_list_of_pharmacy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        <Button
+            android:id="@+id/bt_see_maps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
 
-        app:layout_constraintTop_toBottomOf="@id/bt_see_maps"
-        />
+            android:text="Lihat Peta" />
 
-    <TextView
-        android:id="@+id/tv_pharmacy"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_list_of_pharmacy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
 
-        android:text="@string/title_pharmacy"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+            >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <TextView
+            android:id="@+id/tv_pharmacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_gravity="center"
+            android:text="@string/title_pharmacy" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
