--- a/app/src/main/res/layout/fragment_pharmacy.xml
+++ b/app/src/main/res/layout/fragment_pharmacy.xml
@@ -6,41 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".nav_ui.pharmacy.PharmacyFragment">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/bt_see_maps"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tes nih ye kudunye lu bise"/>
+        android:text="Lihat Peta"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/bt_see_maps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_of_pharmacy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
 
-            android:text="Lihat Peta" />
+        app:layout_constraintTop_toBottomOf="@id/bt_see_maps">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_of_pharmacy"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+    </androidx.recyclerview.widget.RecyclerView>
 
-            >
+    <TextView
+        android:id="@+id/tv_pharmacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-        </androidx.recyclerview.widget.RecyclerView>
-
-        <TextView
-            android:id="@+id/tv_pharmacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_gravity="center"
-            android:text="@string/title_pharmacy" />
-    </LinearLayout>
+        android:layout_gravity="center"
+        android:text="@string/title_pharmacy"
+        app:layout_constraintTop_toBottomOf="@id/rv_list_of_pharmacy"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
