--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,9 +2,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_order"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_order" />
+        android:id="@+id/navigation_history"
+        android:icon="@drawable/history"
+        android:title="@string/title_history" />
 
     <item
         android:id="@+id/navigation_pharmacy"
@@ -12,7 +12,7 @@
         android:title="@string/title_pharmacy" />
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_notifications_black_24dp"
+        android:icon="@drawable/person"
         android:title="@string/title_profile" />
 
     <!--    <item-->
