--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_order">
+    app:startDestination="@+id/navigation_pharmacy">
 
     <fragment
-        android:id="@+id/navigation_order"
-        android:name="com.example.maskerin.nav_ui.order.OrderFragment"
-        android:label="@string/title_order"
-        tools:layout="@layout/fragment_order" />
+        android:id="@+id/navigation_history"
+        android:name="com.example.maskerin.nav_ui.history.HistoryFragment"
+        android:label="@string/title_history"
+        tools:layout="@layout/fragment_history" />
 
     <fragment
         android:id="@+id/navigation_pharmacy"
