--- a/app/src/main/res/layout/fragment_pharmacy.xml
+++ b/app/src/main/res/layout/fragment_pharmacy.xml
@@ -1,34 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".nav_ui.pharmacy.PharmacyFragment"
-    android:paddingBottom="56dp">
+    android:paddingBottom="56dp"
+    android:id="@+id/scroll_view">
 
-    <LinearLayout
+    <Button
+        android:id="@+id/bt_see_maps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" >
+        android:text="Lihat Peta"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/bt_see_maps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lihat Peta" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_list_of_pharmacy"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingVertical="48dp"
+        android:clipToPadding="false"
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_of_pharmacy"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"/>
+        android:nestedScrollingEnabled="false"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_pharmacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="@string/title_pharmacy" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_pharmacy"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/title_pharmacy"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_list_of_pharmacy" />
 
-</ScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
