--- a/app/src/main/res/anim/trans_upwards.xml
+++ b/app/src/main/res/anim/trans_upwards.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android">
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+    android:interpolator="@android:anim/linear_interpolator"
+    android:fillAfter="true">
 
+    <translate
+        android:fromYDelta="-8%p"
+        android:toYDelta="0%p"
+        android:duration="300"
+        />
 </set>
