--- a/app/src/main/res/layout/row_pharmacy.xml
+++ b/app/src/main/res/layout/row_pharmacy.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -17,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/list_item2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -31,72 +34,95 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tv_distance"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_name" />
-
-            <TextView
                 android:id="@+id/tv_address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:forceHasOverlappingRendering="true"
                 android:text="TextView"
-                android:textSize="12sp"
-                app:layout_constraintStart_toEndOf="@+id/tv_distance"
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
             <TextView
                 android:id="@+id/tv_item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mask"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="Masker Anak      : "
+                android:textColor="#FF9800"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_distance" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_item_name2" />
 
             <TextView
-                android:id="@+id/tv_stock"
+                android:id="@+id/tv_item_name2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:fontFamily="sans-serif-condensed-medium"
+                android:text="Masker Dewasa : "
+                android:textColor="#3F51B5"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+
+            <TextView
+                android:id="@+id/tv_stock_dewasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="TextView"
+                android:textColor="#3F51B5"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/tv_item_name2"
+                app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+
+            <TextView
+                android:id="@+id/tv_harga_dewasa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#3F51B5"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/tv_stock_dewasa"
+                app:layout_constraintTop_toBottomOf="@+id/tv_date" />
+
+            <TextView
+                android:id="@+id/tv_harga_anak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FF9800"
+                android:textSize="12sp"
+                app:layout_constraintStart_toEndOf="@+id/tv_stock_anak"
+                app:layout_constraintTop_toBottomOf="@+id/tv_item_name2" />
+
+            <TextView
+                android:id="@+id/tv_stock_anak"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FF9800"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/tv_item_name"
-                app:layout_constraintTop_toBottomOf="@+id/tv_distance" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_item_name2" />
 
             <TextView
                 android:id="@+id/tv_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:text="TextView"
-                android:textSize="12sp"
-                app:layout_constraintStart_toEndOf="@+id/tv_stock"
-                app:layout_constraintTop_toBottomOf="@+id/tv_distance" />
+                android:textSize="10sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_address" />
 
             <TextView
                 android:id="@+id/tv_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
                 android:text="TextView"
-                android:textSize="12sp"
+                android:textSize="10sp"
                 app:layout_constraintStart_toEndOf="@+id/tv_date"
-                app:layout_constraintTop_toBottomOf="@+id/tv_distance" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_address" />
 
-            <TextView
-                android:id="@+id/tv_phone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="TextView"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_item_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
@@ -105,7 +131,7 @@
         android:layout_height="0.2dp"
         android:background="@color/grey"
         app:layout_constraintBottom_toBottomOf="@id/cv_pharmacy"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
